tests/ui/bad-version.stderr
error: expected rustc release number, like 1.31
 --> tests/ui/bad-version.rs:1:28
  |
1 | #[rustversion_msrv::stable(nightly)]
  |                            ^^^^^^^

error: expected rustc release number, like 1.31
 --> tests/ui/bad-version.rs:4:32
  |
4 | #[rustversion_msrv::any(stable(nightly))]
  |                                ^^^^^^^
